--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "engine.js",
+  "name": "bigblock",
   "version": "0.0.1",
-  "description": "Game engine",
-  "main": "engine.js",
-  "dependencies": {
+  "description": "Generic game engine",
+  "main": "bigblock",
+  "dependencies": {},
+  "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "~0.4.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "author": "Tiago de Pádua",
   "license": "ISC"
