--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-uglify": "~0.4.0"
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-shell": "^1.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\""
